[package]
name = "cryptonote-config"
version = "0.1.0"
authors = ["calidion <calidion@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "config for cryptonote"

[dependencies]
cryptonote-basic = "0.1.0"

[badges]
travis-ci = { repository = "cryptonote-rust/config", branch = "master" }
codecov = { repository = "cryptonote-rust/config", branch = "master", service = "github" }
